<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:background="@color/colorSpaceBar">

    <TextView
        android:id="@+id/upper_ar_button_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/upperARButtonText"
        android:textColor="@color/colorWhiteish"
        android:textSize="@dimen/defaultTextSize"
        app:layout_constraintBottom_toTopOf="@id/ar_entrance_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ar_entrance_button"
        android:layout_width="150dp"
        android:layout_height="@dimen/AREntranceLogoSideSize"
        android:background="@drawable/ARMenuButtonImage"
        android:contentDescription="@string/ARButtonDescription"
        app:layout_constraintBottom_toTopOf="@id/lower_ar_button_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upper_ar_button_text_view" />

    <TextView
        android:id="@+id/lower_ar_button_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lowerARButtonText"
        android:textColor="@color/colorWhiteish"
        android:textSize="@dimen/defaultTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ar_entrance_button" />

</androidx.constraintlayout.widget.ConstraintLayout>