<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoadingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/defaultBackgroundDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/defaultBackground"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defaultToolbarHeight"
        android:background="@color/colorSpaceBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ARMenuName"
                android:textColor="@color/colorWhiteish"
                android:textSize="@dimen/defaultToolbarTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/upper_ar_button_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/upperARButtonText"
            android:textColor="@color/colorWhiteish"
            android:textSize="@dimen/defaultTextSize"
            app:layout_constraintBottom_toTopOf="@id/ar_entrance_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ar_entrance_button"
            android:layout_width="150dp"
            android:layout_height="@dimen/AREntranceLogoSideSize"
            android:background="@drawable/ARMenuButtonImage"
            android:contentDescription="@string/ARButtonDescription"
            app:layout_constraintBottom_toTopOf="@id/lower_ar_button_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upper_ar_button_text_view" />

        <TextView
            android:id="@+id/lower_ar_button_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lowerARButtonText"
            android:textColor="@color/colorWhiteish"
            android:textSize="@dimen/defaultTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ar_entrance_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defaultNavbarHeight"
        android:background="@color/colorSpaceBar"
        android:focusableInTouchMode="false"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_all_items_non_active" />

</androidx.constraintlayout.widget.ConstraintLayout>