<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoadingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/defaultBackgroundDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/defaultBackground"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defaultToolbarHeight"
        android:background="@color/colorSpaceBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchMenuName"
                android:textColor="@color/colorWhiteish"
                android:textSize="@dimen/defaultToolbarTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/defaultToolbarHeight"
                android:layout_height="@dimen/defaultToolbarHeight"
                android:layout_marginEnd="@dimen/defaultToolbarLogoMarginRight"
                android:contentDescription="@string/toolbarLogoDescription"
                android:src="@drawable/eye"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defaultSearchFieldHeight"
        android:background="@color/colorSpaceBar"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/search_text_request_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/searchFrameMarginStart"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/searchFrameHint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxWidth="@dimen/searchFrameMaxWidth"
            android:paddingStart="@dimen/searchFrameHorizontalPadding"
            android:paddingTop="@dimen/searchFrameVerticalPadding"
            android:paddingEnd="@dimen/searchFrameHorizontalPadding"
            android:paddingBottom="@dimen/searchFrameVerticalPadding"
            android:textColor="@color/colorWhiteish"
            android:textColorHint="@color/colorWhiteish"
            android:textSize="@dimen/defaultTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/search_posts_button"
            android:layout_width="@dimen/searchButtonSideSize"
            android:layout_height="@dimen/searchButtonSideSize"
            android:layout_marginEnd="@dimen/searchButtonEndMargin"
            android:background="@drawable/ic_m_search_button_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading_gif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/loading"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/no_posts_found_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/noPostsFound"
        android:textColor="@color/colorWhiteish"
        android:textSize="@dimen/warningTextSize"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/swipe_refresher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/swipe_refresher" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/summaryOfSearchFieldAndToolbarHeights"
        android:layout_marginBottom="@dimen/defaultNavbarHeight">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/bottom_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defaultNavbarHeight"
        android:background="@color/colorSpaceBar"
        android:focusableInTouchMode="false"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_all_items_non_active" />

</androidx.constraintlayout.widget.ConstraintLayout>