<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AppMenuActivity">

    <include
        layout="@layout/default_activities_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/surface"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/appMenuSectionsButtonsSideSize"
                android:layout_height="@dimen/appMenuSectionsButtonsSideSize"
                android:layout_margin="@dimen/appMenuSectionsButtonPadding"
                android:src="@drawable/ic_m_community_dark"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/appMenuSectionsButtonsSideSize"
                android:gravity="center_vertical"
                android:text="@string/buttonInfoName"
                android:textColor="@color/onSurface"
                android:textSize="@dimen/buttonNameTextSize" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/appMenuSectionsButtonsSideSize"
                android:layout_height="@dimen/appMenuSectionsButtonsSideSize"
                android:layout_margin="@dimen/appMenuSectionsButtonPadding"
                android:src="@drawable/ic_m_info_dark"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/appMenuSectionsButtonsSideSize"
                android:gravity="center_vertical"
                android:text="@string/buttonSettingsName"
                android:textColor="@color/onSurface"
                android:textSize="@dimen/buttonNameTextSize" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/appMenuSectionsButtonsSideSize"
                android:layout_height="@dimen/appMenuSectionsButtonsSideSize"
                android:layout_margin="@dimen/appMenuSectionsButtonPadding"
                android:src="@drawable/ic_m_question_mark_dark"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/appMenuSectionsButtonsSideSize"
                android:gravity="center_vertical"
                android:text="@string/buttonHelpName"
                android:textColor="@color/onSurface"
                android:textSize="@dimen/buttonNameTextSize" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="startDebugActivity">

            <ImageView
                android:layout_width="@dimen/appMenuSectionsButtonsSideSize"
                android:layout_height="@dimen/appMenuSectionsButtonsSideSize"
                android:layout_margin="@dimen/appMenuSectionsButtonPadding"
                android:src="@drawable/ic_m_bug_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/appMenuSectionsButtonsSideSize"
                android:text="@string/buttonDebugName"
                android:textColor="@color/onSurface"
                android:textSize="@dimen/buttonNameTextSize" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:src="@color/background" />
    </LinearLayout>

    <include
        layout="@layout/navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>